--- a/trunk/MP-TVSeries/Resources/Languages/sk.xml
+++ b/trunk/MP-TVSeries/Resources/Languages/sk.xml
@@ -40,6 +40,7 @@
   <string name="wrongSkin" Original="Wrong Skin file">Chybný súbor vzhľadu</string>
   <string name="special" Original="Special">Špeciál</string>
   <string name="specials" Original="Specials">Špeciály</string>
+  <string name="delPhyiscalWarning" Original="You are about to permanently delete {0} physical file(s).Would you like to proceed?">Chystáte sa nevratne vymazať {0} fyzických súborov.\nPokračovať?</string>
   <string name="Force_Online_Match" Original="Force New Online Lookup For Series">Vynútiť nové hľadanie seriálu online</string>
   <string name="Load_via_NewsLeecher" Original="Load via NewsLeecher">Načítať cez NewsLeecher</string>
   <string name="Download" Original="Download">Sťahovanie</string>
@@ -287,6 +288,7 @@
   <string name="Shouts" Original="Shouts">Výkriky</string>
   <string name="MainMenu" Original="Main Menu">Hlavné menu</string>
   <string name="AddToWatchList" Original="Add {0} to Watchlist">Pridať {0} do watchlistu</string>
+  <string name="TraktNotLoggedIn" Original="You can not do this operation without being\nlogged in. Would you like to Signup or Login\nto trakt.tv now?">Operácia vyžaduje prihlásenie. Chcete sa registrovať alebo prihlásiť\nna trakt.tv?</string>
   <string name="RelatedSeries" Original="RelatedSeries">Podobné seriály</string>
   <string name="SearchTorrent" Original="Torrent Search">Hľadanie torrentov</string>
   <string name="SearchNZB" Original="NZB Search">Hľadanie NZB</string>
@@ -310,6 +312,4 @@
   <string name="PlaybackOutOfOrderLine2" Original="Are you sure you want to continue?">Naozaj si prajete pokračovať?</string>
   <string name="Filters" Original="Filters">Filtre</string>
   <string name="UnwatchedEpisodes" Original="Unwatched Episodes">Epizódy ktoré som nevidel</string>
-  <string name="AllEpisodes" Original="All Episodes">Všetky epizódy</string>
-  <string name="Biography" Original="Biography">Biografia</string>
 </resources>
