--- a/MP-TVSeries/Resources/Languages/es.xml
+++ b/MP-TVSeries/Resources/Languages/es.xml
@@ -40,6 +40,7 @@
   <string name="wrongSkin" Original="Wrong Skin file">Archivo de skin erróneo</string>
   <string name="special" Original="Special">Especial</string>
   <string name="specials" Original="Specials">Especiales</string>
+  <string name="delPhyiscalWarning" Original="You are about to permanently delete {0} physical file(s).Would you like to proceed?">Vas a eliminar permanentemente {0} archivo (s) físicos.\n¿Deseas continuar?</string>
   <string name="Force_Online_Match" Original="Force New Online Lookup For Series">Forzar coincidencia Online</string>
   <string name="Load_via_NewsLeecher" Original="Load via NewsLeecher">Cargar vía NewsLeecher</string>
   <string name="Download" Original="Download">Descargar</string>
@@ -206,7 +207,7 @@
   <string name="Director" Original="Director">Director</string>
   <string name="Directors" Original="Directors">Directores</string>
   <string name="FileSize" Original="File Size">Tamaño de archivo</string>
-  <string name="FirstAired" Original="First Aired">Primera Emisión</string>
+  <string name="FirstAired" Original="First Aired">Estreno</string>
   <string name="Genre" Original="Genre">Género</string>
   <string name="Group" Original="Groups">Grupo</string>
   <string name="Groups" Original="Groups">Grupos</string>
@@ -287,6 +288,7 @@
   <string name="Shouts" Original="Shouts">Shouts</string>
   <string name="MainMenu" Original="Main Menu">Menú Principal</string>
   <string name="AddToWatchList" Original="Add {0} to Watchlist">Añadir {0} a la Lista de Vistos</string>
+  <string name="TraktNotLoggedIn" Original="You can not do this operation without being\nlogged in. Would you like to Signup or Login\nto trakt.tv now?">No puedes realizar esta operación sin estar identificado. ¿Quieres Identificarte o Registrarte en trakt.tv ahora?</string>
   <string name="RelatedSeries" Original="RelatedSeries">Series Relacionadas</string>
   <string name="SearchTorrent" Original="Torrent Search">Buscador torrents</string>
   <string name="SearchNZB" Original="NZB Search">Buscador NZB</string>
@@ -310,6 +312,7 @@
   <string name="PlaybackOutOfOrderLine2" Original="Are you sure you want to continue?">¿Seguro que desea continuar?</string>
   <string name="Filters" Original="Filters">Filtros</string>
   <string name="UnwatchedEpisodes" Original="Unwatched Episodes">Episodios no Vistos</string>
-  <string name="AllEpisodes" Original="All Episodes">Todos los Capítulos</string>
-  <string name="Biography" Original="Biography">Biografía</string>
+  <string name="OverrideLanguage" Original="Override Language Settings">Anular Configuración Idioma</string>
+  <string name="ChangeSeriesLanguage" Original="Change Series Meta Language">Cambiar Meta Lenguaje de Serie</string>
+  <string name="CountSpecialEpisodesAsWatched" Original="Count Special Episodes As Watched">Contar Episodios Especiales Como Vistos</string>
 </resources>
