--- a/trunk/MP-TVSeries/Configuration/GUIConfiguration.resx
+++ b/trunk/MP-TVSeries/Configuration/GUIConfiguration.resx
@@ -134,7 +134,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAA6
-        eQAAAk1TRnQBSQFMAgEBDAEAAUwBBQFMAQUBGAEAARgBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFg
+        eQAAAk1TRnQBSQFMAgEBDAEAAVwBBQFcAQUBGAEAARgBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFg
         AwABYAMAAQEBAAEgBgABkP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A
         /wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AFUAAQEDBAEGAwsBDwMSBBkBIwMdASkDHgErAx0BKQMY
         ASEDEQEXAwoBDgMEAQUDAAEBLwAEAQECAwMEBAEFAwQBBQMDAQQDAgEDAwIBAwMBAQIDAQECAwABAQMA
@@ -683,6 +683,11 @@ local/online refresh of series.
 This is active when first starting MP or when resuming from standby. A manual scan
 can be started within plugin.</value>
   </data>
+  <data name="checkBox_AutoUpdateEpisodeRatings.ToolTip" xml:space="preserve">
+    <value>Only update user series ratings when unchecked.  Saves up to 3 minutes per scan.
+
+This option is not needed when syncing user ratings from trakt.tv using the Trakt plugin. See the trakt plugin to enable this option.</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="button_TestReparse.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -838,6 +843,13 @@ If Trakt plugin is installed and TVSeries plugin is enabled for sync, it's recom
 
 Note: if you are using the Trakt plugin, it's recommended you enable rate dialog after watched from there. This setting can be used to send
 ratings to both thetvdb.com and trakt or just thetvdb.com.</value>
+  </data>
+  <data name="dbCheckBoxTraktCommunityRatings.ToolTip" xml:space="preserve">
+    <value>Ratings from trakt.tv are much better for tv shows and episodes than thetvdb.com.
+
+This option will only work if you have a trakt account and also have enabled MP-TVSeries plugin in the Trakt plugin.
+
+Note: if you want to sync your trakt user ratings to tvseries, you must do this from the Trakt plugin as it's a sync operation.</value>
   </data>
   <data name="label70.Text" xml:space="preserve">
     <value>Parsing Expressions are used by the plugins parsing engine to retrieve a Series Name, Season Number and 
