Added missing strings in english and french languages.

--- a/MP-TVSeries/Resources/Languages/en-US.xml
+++ b/MP-TVSeries/Resources/Languages/en-US.xml
@@ -315,4 +315,6 @@
   <string name="OverrideLanguage" Original="Override Language Settings">Override Language Settings</string>
   <string name="ChangeSeriesLanguage" Original="Change Series Meta Language">Change Series Meta Language</string>
   <string name="CountSpecialEpisodesAsWatched" Original="Count Special Episodes As Watched">Count Special Episodes As Watched</string>
+  <string name="AllEpisodes" Original="All Episodes">All Episodes</string>
+  <string name="Biography" Original="Biography">Biography</string>
 </resources>
