--- a/MP-TVSeries/Resources/Languages/fr.xml
+++ b/MP-TVSeries/Resources/Languages/fr.xml
@@ -313,5 +313,8 @@
   <string name="Filters" Original="Filters">Filtres</string>
   <string name="UnwatchedEpisodes" Original="Unwatched Episodes">Episodes non visionnés</string>
   <string name="OverrideLanguage" Original="Override Language Settings">Modifier les paramètres de la langue</string>
+  <string name="ChangeSeriesLanguage" Original="Change Series Meta Language">Changez le Meta Language dans les series</string>
   <string name="CountSpecialEpisodesAsWatched" Original="Count Special Episodes As Watched">Marquez les épisodes spéciaux comme vus</string>
+  <string name="AllEpisodes" Original="All Episodes">Tous les épisodes</string>
+  <string name="Biography" Original="Biography">Biographie</string>
 </resources>
