--- a/MP-TVSeries/Configuration/GUIConfiguration.resx
+++ b/MP-TVSeries/Configuration/GUIConfiguration.resx
@@ -134,7 +134,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAA6
-        eQAAAk1TRnQBSQFMAgEBDAEAAXQBBgF0AQYBGAEAARgBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFg
+        eQAAAk1TRnQBSQFMAgEBDAEAAXwBBgF8AQYBGAEAARgBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFg
         AwABYAMAAQEBAAEgBgABkP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A
         /wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AFUAAQEDBAEGAwsBDwMSBBkBIwMdASkDHgErAx0BKQMY
         ASEDEQEXAwoBDgMEAQUDAAEBLwAEAQECAwMEBAEFAwQBBQMDAQQDAgEDAwIBAwMBAQIDAQECAwABAQMA
@@ -851,6 +851,17 @@ If Trakt plugin is installed and TVSeries plugin is enabled for sync, it's recom
 Note: if you are using the Trakt plugin, it's recommended you enable rate dialog after watched from there. This setting can be used to send
 ratings to both thetvdb.com and trakt or just thetvdb.com.</value>
   </data>
+  <data name="dbOptionParsedNameFromFolder.ToolTip" xml:space="preserve">
+    <value>If the folder name contains "season" or a translation of, then the folder name will be taken from one level up e.g.
+
+For the given file path:
+C:\TV\The Simpsons\Season 1\simpsons.s01e01.mkv
+
+The last folder name is "Season 1", therefore the series name will be taken from the next level up which is "The Simpsons".</value>
+  </data>
+  <data name="label68.Text" xml:space="preserve">
+    <value>Check the table below if the plugin was able to parse all of the episodes located in your Import Paths  defined above. Episodes not parsed correctly will be highlighted. If renaming your files does not help, you can modify the plugins parser behaviour from the left hand side tree view.</value>
+  </data>
   <data name="label70.Text" xml:space="preserve">
     <value>Parsing Expressions are used by the plugins parsing engine to retrieve a Series Name, Season Number and Episode Number from a Folder Structure / Filename in your Import Paths. 
 This information is required to successfully match up with episodes in the online database.
@@ -879,9 +890,6 @@ If an expression can not evaluate these items, the next expression in the list i
         2nVYBsij1B7KdxlLJ7TrsAyVzKX/UJaHbia/QrsOy3Ala4nDy8O5FAztOizDjRykfGnXvquEdh2W4Q/Z
         XF6roV2HZSYsM2GZCctMWGbCMk8zOgOx+mOAlkSO8gAAAABJRU5ErkJggg==
 </value>
-  </data>
-  <data name="label68.Text" xml:space="preserve">
-    <value>Check the table below if the plugin was able to parse all of the episodes located in your Import Paths  defined above. Episodes not parsed correctly will be highlighted. If renaming your files does not help, you can modify the plugins parser behaviour from the left hand side tree view.</value>
   </data>
   <data name="label69.Text" xml:space="preserve">
     <value>String Replacements can be used to remove common string patterns that may confuse the plugins parsing engine.  It can also be helpful in replacing strange episode names that may not get automatically 
