Added error handling when full size artwork download fails in Artwork Chooser. New 'Download Failed' translation added.

--- a/MP-TVSeries/Resources/Languages/en-US.xml
+++ b/MP-TVSeries/Resources/Languages/en-US.xml
@@ -7,6 +7,7 @@
   <string name="ArtworkSelected" Original="Selected">Selected</string>
   <string name="ArtworkDownloading" Original="Download Progress {0}%">Download Progress {0}%</string>
   <string name="ArtworkDelete" Original="Delete Artwork">Delete Artwork</string>
+  <string name="DownloadFailed" Original="Download Failed">Download Failed</string>
   <string name="ChangeOnlineProvider" Original="Change Online Provider">Change Online Provider</string>
   <string name="Provider" Original="Provider: {0}">Provider: {0}</string>
   <string name="NoArtworkAvailable" Original="No {0} available from {1}">No {0} available from {1}</string>
